--- a/index.html
+++ b/index.html
@@ -4,5 +4,8 @@
  </head>
  <body>
   Michael Mendoza Quisido |||
+  <br>Internet Savvy
+  <br>Linux GNU/Debian Ubuntu User
+  <br>Web Development on Linux Machine Pro
  </body>
 </html>
