--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
  <head>
   <title>Michael Mendoza Quisido |||</title>
  </head>
- <body>
+ <body><p style="font-family:ubuntu" "font-size:30px">
   Michael Mendoza Quisido |||
   <br>Internet Savvy
   <br>Linux GNU/Debian Ubuntu User
-  <br>Web Development on Linux Machine Pro
+  <br>Web Development on Linux Machine Pro </p>
  </body>
 </html>
