--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   Michael Mendoza Quisido |||
   <br>Internet Savvy
   <br>Linux GNU/Debian Ubuntu User
-  <br>Web Development on Linux Machine Pro </p>
+  <br>Web Development on Linux Machine Pro 
+  <br>OpenStack for multi-cloud operations </p>
  </body>
 </html>
